# holographyMod

./: .gitignore  README.md  pyproject.toml  train_data_50ep.json  train_data_5ep.json
checkpoints/: output.txt  plot_info.txt
scripts/: main.py  reconstruct_image.py
src/final_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/holo/: __init__.py  cli.py
src/holo/analysis/: metrics.py  plots.py
src/holo/core/: metrics.py  plots.py
src/holo/core/optics/: reconstruction.py
src/holo/data/: dataset.py  transformed_dataset.py
src/holo/infra/: dataclasses.py  datamodules.py  log.py  tests.py  training.py
src/holo/infra/util/: image_processing.py  paths.py  prog_helper.py  types.py
src/holo/io/: metadata.py  output.py  paths.py
src/holo/optics/: reconstruction.py
src/holo/train/: auto_caller.py  auto_classes.py  autofocus.py  autofocus_recon.py  autofocus_rgb.py  epoch_helper.py
src/holo/util/: crop.py  epoch_helper.py  list_helper.py  log.py  normalize.py  output.py  prog_helper.py  reason_checks.py  saveLoad.py
src/holographyMod.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/static/: .gitignore
src/tex/: .gitignore  Koehler_577final.tex  penrose.cls  penrose_mine.cls
