[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=68", "wheel" ]

[project]
name = "holo"
version = "0.1.0"
description = "CLI for hologram autofocus training / evaluation"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "click>=8.1,<8.2",
  "dash>=3.0.4",
  "matplotlib>=3.10.1",
  "numpy>=2.2.4",
  "pillow>=11.2.1",
  "plotly>=6.0.1",
  "plotly-stubs>=0.0.5",
  "polars>=1.27.1",
  "ruff>=0.11.7",
  "scipy>=1.15.2",
  "seaborn>=0.13.2",
  "timm>=1.0.15",
  "torch>=2.6",
  "torchoptics>=0.3.1",
  "torchvision>=0.21",
  "typer>=0.15.3",
]

scripts.holo = "holo.cli:app" # new path

[tool.setuptools]
package-dir = { "" = "src" } # ← tell it “everything lives in src/”

[tool.setuptools.packages.find] # optional but explicit
where = [ "src" ]

[tool.ruff]
target-version = "py312"
line-length = 120
src = [ "src", "tests" ]
exclude = [ ".venv", "src/data", "src/static" ]
respect-gitignore = true
unsafe-fixes = true
show-fixes = true
format.quote-style = "double"
format.docstring-code-format = true
select = [ "E", "F", "I", "UP", "B", "D" ]
ignore = [
  "D100",
  "D104", # no module-level docstring
  "B008", # call function in argument default
]

isort.force-single-line = true
isort.known-first-party = [ "holo" ]
isort.known-third-party = [ "matplotlib", "torch", "torchvision", "polars", "numpy", "PIL" ]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"            # “basic” 
venvPath = ".venv"
venv = "."
stubPath = "typings"
exclude = [ "src/static", "src/data" ]
extraPaths = [ "src" ]                 # 'import holo' will resolve
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = "hint"
reportPrivateUsage = "warning"
reportGeneralTypeIssues = "warning"
